kubernetes-templating/frontend/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
    name: frontend
    annotations:
        kubernetes.io/ingress.class: "nginx"
        kubernetes.io/tls-acme: "true"
        cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - hipster-shop.35.241.197.0.sslip.io
      secretName: hipster-shop.35.241.197.0.sslip.io
    rules:
    - host: hipster-shop.35.241.197.0.sslip.io
      http:
        paths:
        - path: /
          backend:
            serviceName: frontend
            servicePort: 8000
